Fix jumping header when reloading

--- a/public/css/icinga/layout-structure.less
+++ b/public/css/icinga/layout-structure.less
@@ -24,7 +24,7 @@ html {
   bottom: 0;
   left: 0;
   position: fixed;
-  top: 3em;
+  top: 2.25em;
   width: 12em;
 }
 
@@ -33,7 +33,7 @@ html {
   left: 12em;
   position: fixed;
   right: 0;
-  top: 3em;
+  top: 2.25em;
 }
 
 .iframe {
