--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -24,7 +24,7 @@
   font-size: 2em;
 }
 
-#header-logo-container,
+#header,
 #login,
 #main > .container,
 #menu {
@@ -37,11 +37,10 @@
 }
 
 #header-logo-container {
-  height: 3em;
-  margin-bottom: 0.2em;
-  margin-left: 1.5em;
-  margin-top: 0.2em;
+  height: 2.667em;
+  margin-left: .7em;
   width: 100px;
+  margin-top: 0.1667em;
 }
 
 #header-logo {
